syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ficus.inference.speech.rpcdata";
option java_outer_classname = "ResultPostProcess";
option objc_class_prefix = "HLW";
  
package ficus.inference.speech.rpcdata;

import public "recognition_common.proto";

// 替换规则 
//message ReplaceRule { 
//    repeated string sources = 1;
//    repeated string targets = 2;
//}

// 后处理选项
message PostProcessOption {
    bool enable_convert_number = 1;
    bool enable_add_punctuation = 2;
    bool enable_replace_rule = 3;
    // ReplaceRule replace_rule = 4; // 初始化即决定不再改
}
 
message BatchPostProcessRequest {
    RequestHeader request_header = 1;
    PostProcessOption option = 2; // 整个batch使用同一个选项
    repeated SpeechRecogResult input_results = 3; // 输入asr或文本审核(如果有)输出的识别结果
}
 
message PostProcessResponse {
    AsrStatus status = 1;
    SpeechRecogResult result = 2; // 输出后处理后的识别结果
}
 
message BatchPostProcessResponse {
    AsrStatus status = 1;
    repeated PostProcessResponse responses = 2;
}

